// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavList > renders the NavList component 1`] = `
<div>
  <nav
    class="dusk-nav-list"
  >
    
    <a
      class="dusk-anchor dusk-nav-list__link"
      href="https://dusk.network"
    >
      Dusk
    </a>
    <!--&lt;Anchor&gt;-->
    <!--&lt;AppAnchor&gt;-->
    
    <a
      class="dusk-anchor dusk-nav-list__link"
      href="https://explorer.dusk.network"
    >
      Explorer
    </a>
    <!--&lt;Anchor&gt;-->
    <!--&lt;AppAnchor&gt;-->
  </nav>
  
  <!--&lt;NavList&gt;-->
</div>
`;

exports[`NavList > should pass additional class names and attributes to the rendered element 1`] = `
<div>
  <nav
    class="dusk-nav-list foo bar"
  >
    
    <a
      class="dusk-anchor dusk-nav-list__link"
      href="https://dusk.network"
    >
      Dusk
    </a>
    <!--&lt;Anchor&gt;-->
    <!--&lt;AppAnchor&gt;-->
    
    <a
      class="dusk-anchor dusk-nav-list__link"
      href="https://explorer.dusk.network"
    >
      Explorer
    </a>
    <!--&lt;Anchor&gt;-->
    <!--&lt;AppAnchor&gt;-->
  </nav>
  
  <!--&lt;NavList&gt;-->
</div>
`;
